--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: center;
